✨ feature : hello world page 및 테스트 세팅

--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.13.4",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.0.0",
+    "jsdom": "^27.0.0",
+    "prettier": "^3.2.5",
     "turbo": "^1.13.4",
-    "prettier": "^3.2.5"
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
