--- a/apps/_shell/package.json
+++ b/apps/_shell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "_shell",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -8,13 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "type-check": "vue-tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@gongjam/ui": "workspace:*",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@gongjam/eslint-config": "workspace:*",
@@ -24,14 +23,17 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.22.0",
+    "happy-dom": "^20.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^6.0.3",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.1.10"
   }
 }
