--- a/apps/hello-world/wrangler.toml
+++ b/apps/hello-world/wrangler.toml
@@ -1,6 +1,6 @@
 # Cloudflare Pages configuration for hello-world app
 
-name = "gongjam-hello-world"
+name = "hello"
 compatibility_date = "2024-01-01"
 
 # Pages configuration
