--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -20,7 +20,7 @@
     "@gongjam/eslint-config": "workspace:*",
     "@gongjam/typescript-config": "workspace:*",
     "@gongjam/vite-config": "workspace:*",
-    "@originjs/vite-plugin-federation": "^1.4.1",
+    "@module-federation/vite": "^1.9.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
