--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.22.0",
+    "lefthook": "^1.11.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
