✨ feature (blog) : init blog app

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "turbo run dev",
     "dev:shell": "pnpm --filter _shell dev",
     "dev:hello": "pnpm --filter hello-world dev",
-    "dev:all": "concurrently \"pnpm dev:shell\" \"pnpm dev:hello\" --names \"shell,hello\" --prefix-colors \"blue,green\"",
+    "dev:blog": "pnpm --filter blog dev",
+    "dev:all": "concurrently \"pnpm dev:shell\" \"pnpm dev:hello\" \"pnpm dev:blog\" --names \"shell,hello,blog\" --prefix-colors \"blue,green,magenta\"",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "type-check": "turbo run type-check",
