✨ feature (blog) : my first blog post

--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "test": "turbo run test",
     "type-check": "turbo run type-check",
     "format": "prettier --write \"**/*.{ts,tsx,vue,js,jsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,vue,js,jsx,json,md}\""
+    "format:check": "prettier --check \"**/*.{ts,tsx,vue,js,jsx,json,md}\"",
+    "upload:image": "tsx scripts/upload-to-r2.ts"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.699.0",
     "@turbo/gen": "^1.13.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
     "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
     "happy-dom": "^20.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.2.5",
+    "tsx": "^4.19.2",
     "turbo": "^1.13.4",
     "vitest": "^3.2.4"
   },
