✨ feature (guestbook) : 쉘과 통합

--- a/apps/_shell/.env.production
+++ b/apps/_shell/.env.production
@@ -1,2 +1,3 @@
 VITE_HELLO_HOME_URL=https://hello.jeongwoo.in
 VITE_BLOG_URL=https://blog.jeongwoo.in
+VITE_GUESTBOOK_URL=https://guestbook.jeongwoo.in
