--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:shell": "pnpm --filter _shell dev",
     "dev:hello": "pnpm --filter hello-world dev",
     "dev:blog": "pnpm --filter blog dev",
-    "dev:all": "concurrently \"pnpm dev:shell\" \"pnpm dev:hello\" \"pnpm dev:blog\" --names \"shell,hello,blog\" --prefix-colors \"blue,green,magenta\"",
+    "dev:guestbook": "pnpm --filter guestbook dev",
+    "dev:all": "concurrently \"pnpm dev:shell\" \"pnpm dev:hello\" \"pnpm dev:blog\" \"pnpm dev:guestbook\" --names \"shell,hello,blog,guestbook\" --prefix-colors \"blue,green,magenta,cyan\"",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "type-check": "turbo run type-check",
