✨ feature (blog - 빌드시 xml R2에 업로드하고, /sitemap.xml에 바인딩하는 Functions 만듬) :

--- a/apps/_shell/tsconfig.json
+++ b/apps/_shell/tsconfig.json
@@ -10,8 +10,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "types": ["vite/client"]
+    "types": ["vite/client", "@cloudflare/workers-types"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "functions/**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
