--- a/apps/_shell/package.json
+++ b/apps/_shell/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251205.0",
     "@gongjam/eslint-config": "workspace:*",
     "@gongjam/typescript-config": "workspace:*",
     "@gongjam/vite-config": "workspace:*",
