--- a/apps/guestbook/.env.development
+++ b/apps/guestbook/.env.development
@@ -1,3 +1,3 @@
-VITE_BASE_URL=http://localhost:3003
+VITE_BASE_URL=https://guestbook.jeongwoo.in
 VITE_SUPABASE_KEY=sb_publishable_dYZqPInm6Vq8EVKs2KF4ig_UqkP22TX
 VITE_SUPABASE_URL=https://tmsqdcswmhjwwpfnclmk.supabase.co
