--- a/apps/_shell/package.json
+++ b/apps/_shell/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "wrangler pages deploy dist",
     "preview": "vite preview",
     "lint": "eslint .",
     "type-check": "vue-tsc --noEmit"
