🐛 fix (blog) : xml생성 오류 수정. 파일 생성없이 바로 업로드

--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "pnpm build:posts && vite build && pnpm build:sitemap && pnpm upload:sitemap",
+    "build": "pnpm build:posts && vite build && pnpm upload:sitemap",
     "build:posts": "tsx scripts/build-posts.ts",
     "build:sitemap": "tsx scripts/generate-sitemap.ts",
     "upload:sitemap": "tsx scripts/upload-sitemap.ts",
