--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -23,14 +23,14 @@
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-attrs": "^4.2.0",
+    "markdown-it-prism": "^3.0.1",
+    "prismjs": "^1.30.0",
     "reading-time": "^1.5.0",
-    "shiki": "^1.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
-    "dotenv": "^16.4.5",
     "@gongjam/eslint-config": "workspace:*",
     "@gongjam/typescript-config": "workspace:*",
     "@gongjam/vite-config": "workspace:*",
@@ -38,12 +38,14 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.10.2",
+    "@types/prismjs": "^1.26.5",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vue/test-utils": "2.4.6",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.22.0",
